# sample

./: pyproject.toml  test.py
.github/workflows/: semgrep.yml
frontend/: package-lock.json  package.json
